log/build_2026-03-31_10-23-34/estimation/stderr.log
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Matrix3d estimation::LegKinematics::computeInertiaMatrix(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:8:21: error: ‘LegConstants’ is not a namespace-name
    8 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:10:12: warning: unused variable ‘l1’ [-Wunused-variable]
   10 |     double l1 = LegConstants::L_THIGH;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:11:12: warning: unused variable ‘l2’ [-Wunused-variable]
   11 |     double l2 = LegConstants::L_CALF;
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:18:12: warning: unused variable ‘s12’ [-Wunused-variable]
   18 |     double s12 = std::sin(q(1) + q(2));  // sin(thigh + calf)
      |            ^~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeCoriolisTerm(const Vector3d&, const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:48:21: error: ‘LegConstants’ is not a namespace-name
   48 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:55:12: warning: unused variable ‘c2’ [-Wunused-variable]
   55 |     double c2 = std::cos(q(1));
      |            ^~
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp: In member function ‘Eigen::Vector3d estimation::LegKinematics::computeGravityTerm(const Vector3d&) const’:
/home/lzh/VMC_Quadruped/src/estimation/src/leg_kinematics.cpp:75:21: error: ‘LegConstants’ is not a namespace-name
   75 |     using namespace LegConstants;
      |                     ^~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/estimation_kinematics.dir/build.make:76：CMakeFiles/estimation_kinematics.dir/src/leg_kinematics.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:139：CMakeFiles/estimation_kinematics.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
